# nneval

./: .gitignore  CMakeLists.txt  README.md
network/: c1bias.txt  c2bias.txt  c3bias.txt  c4bias.txt  c5bias.txt  conv1.txt  conv2.txt  conv3.txt  conv4.txt  conv5.txt  conv6.txt  uc1bias.txt  upconv1.txt
src/: CMakeLists.txt  bench.art  image.art  image.cpp  image.h  image.impala  interface.art  interface.cpp  interface.h  interface.impala  iterate.art  iterate.impala  kernel.art  kernel.impala  matrix.art  matrix.impala  mkl_cblas.cpp  nn.art  nn.cpp  nn.h  nn.impala  output.art  output.impala  test.cpp
